# all-in-one-chatbot

./: README.md
app-streamlit/: Dockerfile  create-iam-role.sh  deploy.sh  main.py  pyproject.toml  requirements.txt  run-locally.sh
app-streamlit/src/app_streamlit/: client.py  constants.py
