[project]
name = "app-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-text-splitters>=0.3.9",
    "langchainhub>=0.1.21",
    "loguru>=0.7.3",
    "onnxruntime>=1.22.1",
    "protobuf>=6.32.0",
    "streamlit>=1.48.1",
]
